--- a/NewsApp/app/src/main/res/layout/activity_splash__screen.xml
+++ b/NewsApp/app/src/main/res/layout/activity_splash__screen.xml
@@ -12,14 +12,28 @@ android:background="#fff">
         android:layout_width="260dp"
         android:layout_height="244dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/logo_news" />
+        android:src="@drawable/news_logo" />
+
+    <TextView
+        android:id="@+id/txtView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/img_logo"
+        android:layout_marginTop="-39dp"
+        android:fontFamily="cursive"
+        android:gravity="center"
+        android:text="Explorify Daily"
+        android:textColor="#1B1919"
+
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/img_logo"
+        android:layout_below="@+id/txtView"
         android:layout_marginStart="70dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="70dp"
